--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-auth.js"></script>
     <script src="../src/index.js"></script>
   </body>
 </html>
